# vldmcp

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
src/vldmcp/: __init__.py  __main__.py  cli.py  config.py  config_service.py  crypto.py  daemon.py  daemon_service.py  deployment.py  file_service.py  installer.py  key_service.py  paths.py  runtime_detection.py  server.py  server_manager.py  service.py
src/vldmcp/cli/: __init__.py  lifecycle.py  server.py
src/vldmcp/docker/: Dockerfile
src/vldmcp/models/: __init__.py  claim.py  disk_usage.py  info.py  machine.py
src/vldmcp/models/api/: __init__.py
src/vldmcp/models/call/: __init__.py  context.py  security.py
src/vldmcp/models/config/: __init__.py  daemon.py  main.py  platform.py  runtime.py
src/vldmcp/platform/: __init__.py  base.py  detection.py  native.py  podman.py
src/vldmcp/platform/assets/: __init__.py
src/vldmcp/runtime/: __init__.py  base.py  detection.py  native.py  podman.py
src/vldmcp/runtime/assets/: Dockerfile
src/vldmcp/service/: __init__.py  base.py  claim.py  crud.py  daemon.py  decorator.py  id.py  root.py  security.py
src/vldmcp/service/platform/: __init__.py  base.py  detection.py  native.py  podman.py
src/vldmcp/service/platform/assets/: Dockerfile
src/vldmcp/service/system/: config.py  crypto.py  daemon.py  installer.py  key.py  storage.py
src/vldmcp/util/: output.py  paths.py  persistent_dict.py  pprint.py  print_json.py  process.py  version.py
tests/: conftest.py  test_print_json.py
tests/unit/: __init__.py  test_crypto.py  test_crypto_bip39.py  test_paths.py  test_version.py
tests/unit/cli/: test_remove.py
tests/unit/models/: test_disk_usage.py  test_info.py
tests/unit/platform/: test_native_platform.py
tests/unit/runtime/: test_native_install.py
tests/unit/server/: __init__.py  test_install.py  test_install_seed.py  test_uninstall.py
tests/unit/service/: test_base_service.py  test_crud_data_persistence.py  test_crud_service.py  test_decorator.py  test_id_service.py  test_service_names.py
tests/unit/service/platform/: test_detection.py  test_native.py
tests/unit/service/system/: test_crypto.py  test_crypto_bip39.py  test_crypto_service.py  test_daemon_service.py  test_installer.py  test_storage_service.py
tests/unit/util/: test_persistent_dict.py  test_pprint_extra.py
tests/unit/utils/: test_output.py  test_pprint.py
