[project]
name = "vldmcp"
description = "A distributed (FoaF) MCP server using veilid and podman"
version = "0.0.1"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://bitplane.net/dev/python/vldmcp"
Repository = "https://github.com/bitplane/vldmcp"

dependencies = [
    "click",
    "fastapi",
    "fastmcp",
    "gitpython",
    "veilid"
]

[project.scripts]
vldmcp = "vldmcp.cli:cli"
vldmcpd = "vldmcp.server:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "pydoc-markdown"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
